# Proyecto_final_Digitales_III

./: Proyecto_final_presentacion_HappyPet.pptx  README.md  configuracion_gramos_teclado.c  funcionamiento_motor.c  intervalos_tiempo.c  seguridad.c
Dispensador_de_comida/: CMakeLists.txt  main.c
Dispensador_de_comida/src/: configuracion_porcion_teclado.c  configuracion_porcion_teclado.h  configuracion_tiempo_teclado.c  configuracion_tiempo_teclado.h  funcionamiento_motor.c  funcionamiento_motor.h  intervalos_tiempo.c  intervalos_tiempo.h  mostrar_en_displays.c  mostrar_en_displays.h  sensado_agua.c  sensado_agua.h  sensor_proximidad.c  sensor_proximidad.h
programas/: configuracion_tiempo_teclado.c  ejemplo2_display.c  ejemplo_display.c  intervalos_tiempo.c  medir_distancia.c  mostrar_en_displays.c  seguridad.c
